# mdserve

./: Cargo.toml  README.md
src/: main.rs
src/html/: head.html  tail.html
