[package]
name = "mdserve"
version = "0.1.0"
authors = ["Pierre Marchand <pierre-m@atelier-cartographique.be>"]
edition = "2018"

[dependencies]
# warp = "0.1.20"
clap = "2.33.0"
warp = { git="https://github.com/seanmonstar/warp.git" }
comrak = "0.6.2"
tokio = { version = "0.2", features = ["blocking", "io-util", "fs", "macros", "rt-threaded", "stream", "sync", "time"] }
futures = "0.3"
http = "0.2"
ammonia = "3.0.0"
lazy_static = "1.4.0"
